[package]
name = "remotec"
version = "0.1.0"
edition = "2021"
description = "A CLI launcher for RDP and SSH"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
license = "GPL-3.0"
repository = "https://github.com/jacob-pro/remotec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cfg-if = "1.0.0"
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.17"
num-integer = "0.1"
open = "3.0.2"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
shell-words = "1.0.0"
shell_completion = "0.0.1"
whoami = "0.9.0"

[[bin]]
name = "remotec"
path = "src/main.rs"

[[bin]]
name = "__remotec_shell_completion"
path = "src/completion.rs"
